# Projeto-analise-ativos-b3

./: .gitignore  README.md  pyproject.toml
app/: front.py  leitura.py  test.py
