[tool.poetry]
name = "projeto b3"
version = "0.1.0"
description = "Analise de rendimento ações"
authors = ["keitarods <83796605+keitarods@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
requests = "^2.31.0"
openpyxl = "^3.1.2"
streamlit = "^1.32.2"
streamlit-aggrid = "^0.3.4.post3"
streamlit-pandas-profiling = "^0.1.3"
pydantic = "^2.6.4"
plotly = "^5.20.0"
altair = "^5.2.0"
yfinance = "^0.2.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
